--- a/src/base.css
+++ b/src/base.css
@@ -58,3 +58,10 @@ p {
 }
 
 html, body { overflow-x: hidden; }
+
+.content-wrapper {
+  background: linear-gradient(180deg, #E6FFFA 0%, #FFFFFF 100%);
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
